[gd_scene load_steps=6 format=3 uid="uid://cqufgm7ocho1i"]

[ext_resource type="Script" uid="uid://durpw164djiny" path="res://src/ChainTransfer/chain_transfer.gd" id="1_dolaf"]
[ext_resource type="Script" uid="uid://cpomm3myorbih" path="res://src/ChainTransfer/chain_bases.gd" id="2_dolaf"]
[ext_resource type="PackedScene" uid="uid://ctc4i4ft2nrh2" path="res://src/ChainTransfer/Base.tscn" id="2_ftoaw"]
[ext_resource type="Script" uid="uid://cccc713tuifj" path="res://src/ChainTransfer/base.gd" id="4_lm17t"]

[sub_resource type="BoxShape3D" id="BoxShape3D_og5kt"]
resource_local_to_scene = true
size = Vector3(1.45, 0.2, 0.744)

[node name="ChainTransfer" type="Node3D"]
process_mode = 3
transform = Transform3D(-2.6226834e-08, 0, 1, 0, 1, 0, -0.6, 0, -4.371139e-08, 0, 0, 0)
script = ExtResource("1_dolaf")
speed_tag_group_name = "TagGroup0"
popup_tag_group_name = "TagGroup0"
metadata/_edit_group_ = true

[node name="ChainBases" type="Node3D" parent="."]
script = ExtResource("2_dolaf")

[node name="Base" parent="ChainBases" instance=ExtResource("2_ftoaw")]

[node name="Base2" parent="ChainBases" instance=ExtResource("2_ftoaw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.33)

[node name="ChainTransferBase" type="Node3D" parent="ChainBases" instance=ExtResource("2_ftoaw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.66)
script = ExtResource("4_lm17t")

[node name="SimpleConveyorShape" type="StaticBody3D" parent="."]
transform = Transform3D(1.6666666, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
collision_layer = 16
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="SimpleConveyorShape"]
transform = Transform3D(1, 0, 0, 0, 1, 0, -2.52243e-13, 0, 1, 0, -0.094, 0.33)
shape = SubResource("BoxShape3D_og5kt")
